[gd_scene load_steps=2 format=3 uid="uid://7ejg1f0f55t6"]

[ext_resource type="Script" path="res://world_scenes/chunk/chunk.gd" id="1_2ne51"]

[node name="Chunk" type="Node2D"]
script = ExtResource("1_2ne51")

[node name="backLayer" type="Sprite2D" parent="."]
modulate = Color(0.568627, 0.568627, 0.729412, 1)
z_index = -5
centered = false

[node name="mainLayer" type="Sprite2D" parent="."]
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-64, -64, 192, 192)

[node name="CHUNKDRAW" type="CHUNKDRAW" parent="."]
position = Vector2(0.0704675, 1.13832)

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="chunkDrawn" from="CHUNKDRAW" to="." method="_on_chunkdraw_chunk_drawn"]
